# JakeSky-rs

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  Cargo.toml  LICENSE  README.md  jakesky.tf
.github/workflows/: build-and-deploy.yml  build-and-test.yml  ci.yml  claude-code-review.yml  claude.yml  dependabot-auto-merge.yml  deploy.yml
src/: ai.rs  alert_summary.rs  alexa.rs  dark_sky.rs  lambda.rs  lib.rs  main.rs
src/weather/: accu_weather.rs  dark_sky.rs  mod.rs  open_weather.rs
