[package]
name = "jakesky"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
again = "0.1"
anyhow = "1.0"
aws-config = "1"
aws-sdk-bedrockruntime = "1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["env"] }
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils", features = ["query"] }
lambda_runtime = "1.*"
log = "0.4"
reqwest = { version = "0.13", features = ["gzip", "json", "query"] }
rustls = { version = "0.23", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.*", features = ["full"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
