[package]
name = "jakesky"
authors = ["Jacob Luszcz"]
default-run = "main"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-bedrockruntime = { version = "1", features = ["behavior-version-latest"] }
chrono = { version = "0", features = ["serde"] }
chrono-tz = "0"
clap = { version = "4", features = ["env"] }
jluszcz_rust_utils = { git = "https://github.com//jluszcz/rust-utils", features = ["query"] }
lambda_runtime = "1"
log = "0.4"
rustls = { version = "0.23", default-features = false, features = ["aws_lc_rs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "lambda"
path = "src/lambda.rs"
